# YAKL

./: CMakeLists.txt
src/: yakl-config.cmake.in
